# tee_time_tracker_v2

./: Cargo.toml  Total Time: %{time_total}s\n  dockerfile
bash_commands/: request_endpoint.sh
src/: course_service.rs  main.rs  structs.rs  tee_time_service.rs
src/resources/: golf_courses.json
