[package]
name = "tee_time_tracker_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "gzip"] }
scraper = "0.19"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
regex = "1"
tower-http = { version = "0.6.8", features = ["cors"] }
